# my-first-contract

./: Cargo.toml  NOTICE  README.md  config.terrain.json
artifacts/: checksums_intermediate.txt  counter.wasm  wrapped_token.wasm
contracts/counter/: Cargo.toml
contracts/counter/src/: contract.rs  msg.rs  state.rs
contracts/wrappend-token/: Cargo.toml
contracts/wrappend-token/examples/: erc20-schema.rs
contracts/wrappend-token/src/: contract.rs  erc20.rs  lib.rs  state.rs  tests.rs
